--- a/package.json
+++ b/package.json
@@ -7,8 +7,22 @@
   "main": "app.js",
   "keywords": [],
   "scripts": {
+    "------production------": "",
     "start": "ts-node server.ts",
-    "start-js": "node index.js"
+    "start-js": "node index.js",
+
+    "------development------": "",
+    "---working-docker-online---": "",
+    "start:dev:hotreload": "nodemon -L --exec ts-node server.ts",
+    
+    "---working-docker---": "",
+    
+    "---working-with-pure-node---": "",
+    "start:dev:hotreload-debug": "nodemon -L --exec node --inspect=0.0.0.0 -r ts-node/register server.ts",
+    "start:dev:hotreload-debug-wait": "nodemon -L --exec node --inspect-brk=0.0.0.0 -r ts-node/register server.ts",
+    
+    "---didnt-working---": "",
+    "didnt-working-start:dev:hotreload-debug-wait": "nodemon --exec 'ts-node --inspect-brk=0.0.0.0:9229 --require ts-node/register server.ts'"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -18,6 +32,7 @@
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.41",
+    "nodemon": "^2.0.2",
     "typescript": "^3.7.5"
   }
 }
