--- a/environment/dev.env
+++ b/environment/dev.env
@@ -1,2 +1,2 @@
 NODE_ENV=development
-DB_CONNECTION_STRING=mongodb://mongo:27017/docker_nodejs_app
+MONGODB_URI=mongodb://mongo:27017/docker_nodejs_app
