--- a/environment/prod.env
+++ b/environment/prod.env
@@ -1,6 +1,6 @@
+OVERIDDED_BY=HEROKU_Config_Vars
 NODE_ENV=production
-DB_CONNECTION_STRING_2=mongodb://admin:1234abcd@ds213529.mlab.com:13529/heroku_r0ms4vkm
-
+MONGODB_URI=mongodb://<dbuser>:<dbpassword>@ds213529.mlab.com:13529/heroku_r0ms4vkm
 DB_USER=1
 DB_PASS=1
 DB_HOST=1
