--- a/environment/prod.env
+++ b/environment/prod.env
@@ -1,3 +1,3 @@
-OVERIDDED_BY=HEROKU_Config_Vars
 NODE_ENV=production
-MONGODB_URI=mongodb://<dbuser>:<dbpassword>@ds213529.mlab.com:13529/heroku_r0ms4vkm
+OVERIDDED_BY=HEROKU_Config_Vars
+MONGODB_URI=mongodb://<db-user>:<db-password>@<db-host>:<db-port>/<db-name>
