--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
   "name": "docker_node_app",
   "version": "1.0.0",
-  "description": "nodejs image demo",
-  "author": "your name",
+  "description": "nodejs mini app image demo",
+  "author": "Ofir A.",
   "license": "MIT",
-  "main": "app.js",
+  "main": "server.js",
   "keywords": [],
   "scripts": {
     "------production------": "",
     "start": "ts-node server.ts",
     "start-js": "node index.js",
-
     "------development------": "",
     "---working-docker-online---": "",
     "dev:hot-reload": "nodemon -L --exec ts-node server.ts",
     "dev:hot-reload:debug": "nodemon -L --exec node --inspect=0.0.0.0:9229 -r ts-node/register server.ts",
     "dev:hot-reload:debug:wait": "nodemon -L --exec node --inspect-brk=0.0.0.0:9229 -r ts-node/register server.ts",
-    
     "---working-docker---": "",
-    
     "---working-with-pure-node---": "",
-    
     "---didnt-working---": "",
     "didnt-working:dev:hot-reload:debug:wait": "nodemon --exec 'ts-node --inspect-brk=0.0.0.0:9229 --require ts-node/register server.ts'"
   },
@@ -32,6 +28,7 @@
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.41",
+    "@types/node": "^13.7.0",
     "nodemon": "^2.0.2",
     "typescript": "^3.7.5"
   }
